--- a/build.xml
+++ b/build.xml
@@ -23,7 +23,7 @@
         </javac>
     </target>
      <target name="jar" depends="compile">
-        <jar destfile="${dist.dir}/rectangle.jar" basedir="${build.jar}">
+        <jar destfile="${dist.dir}/rectangle.jar" basedir="${build.dir}">
             <manifest>
                 <attribute name="Main-Class" value="Rectangulator"/>
             </manifest>
