--- a/build.xml
+++ b/build.xml
@@ -6,6 +6,7 @@
     <property name="dist.dir" location="dist"/>
     <property name="docs.dir" location="docs"/>
     <path id="class.path">
+        <pathelement location="./lib/junit-4.10.jar" />
         <pathelement location="./bin"/>
     </path> 
     <target name="clean">
