--- a/build.xml
+++ b/build.xml
@@ -7,7 +7,7 @@
     <property name="docs.dir" location="docs"/>
     <path id="class.path">
         <pathelement location="./lib/junit-4.10.jar" />
-        <pathelement location="./bin"/>
+        <pathelement location="${build.dir}"/>
     </path> 
     <target name="clean">
         <delete dir="${build.dir}"/>
